TFP-6069: Utkast av en v1 API for formidling slik at vi på sikt kan fjerne bruk av frontend lenkene